--- a/views/home/index.ejs
+++ b/views/home/index.ejs
@@ -1,4 +1,25 @@
 <%- layout('../layouts/layout') %>
-<h1><%- title %></h1>
-<p>Welcome to <%- title %></p>
-<p>Under Construction. Please come back later!</p>
+<main class="container-fluid">
+    <div class="jumbotron">
+        <div class="container-fluid">
+            <h1><%- title %></h1>
+            <p>Welcome to <%- title %></p>
+            <p>Under Construction. Please come back later!</p>
+            <a class="btn btn-primary btn-lg" href="game">Play Now <i class="fa fa-arrow-right fa-fw"></i></a>
+        </div>
+    </div>
+    <section class="panel panel-default">
+        <div class="panel-body">
+            <h1>About</h1><!--TODO: Fill in About Section-->
+            <hr>
+            <p>Placeholder</p>
+        </div>
+    </section>
+    <section class="panel panel-default">
+        <div class="panel-body">
+            <h1>How To Play</h1><!--TODO: Fill in How To Play Section-->
+            <hr>
+            <p>Placeholder</p>
+        </div>
+    </section>
+</main>
