--- a/views/layouts/layout.ejs
+++ b/views/layouts/layout.ejs
@@ -1,9 +1,11 @@
 <!DOCTYPE html>
 <html lang="en-ca">
 <head>
-<%- partial('../partials/head') %>
+    <%- partial('../partials/head') %>
 </head>
 <body>
-<%- body %>
+    <%- partial('../partials/header') %>
+    <%- body %>
+    <%- partial('../partials/footer') %>
 </body>
 </html>
