Fixed undefined variable on 404 page in production environments

--- a/views/errors/error-generic.ejs
+++ b/views/errors/error-generic.ejs
@@ -1,9 +1,14 @@
 <%- layout('../layouts/layout') %>
 <main class="container-fluid">
     <div class="alert alert-danger">
+        <% if (typeof error.status != "undefined" && typeof error.stack != "undefined"){ %>
         <h1><i class="fa fa-exclamation-circle fa-fw"></i><%= error.status + " " + message %></h1>
         <hr>
         <pre><%= error.stack %></pre>
+        <% } else { %>
+        <h1><i class="fa fa-exclamation-circle fa-fw"></i><%= message %></h1>
+        <hr>
+        <% } %>
         <a href="javascript:window.history.back()" class="btn btn-danger">
             <i class="fa fa-arrow-left fa-fw"></i>
             Go Back
