--- a/views/partials/head.ejs
+++ b/views/partials/head.ejs
@@ -1,3 +1,6 @@
+<!--PHPStorm error suppression -->
+<!--suppress HtmlUnknownTarget -->
+
 <!-- The standard stuff -->
 <meta charset="UTF-8">
 <meta name="Viewport" content="width=device-width,initial-scale=1.0,minimum-scale=1.0,maximum-scale=1.0,user-scalable=no">
