--- a/public/stylesheets/game.scss
+++ b/public/stylesheets/game.scss
@@ -1,12 +1,24 @@
 nav {
   margin-bottom: 0 !important;
 }
+@keyframes animatedBackground {
+  from { background-position: 512px 0; }
+  to { background-position: 0 0; }
+}
 #game-window{
   position: relative;
   width: 100%;
   height: calc(100vh - 119px);
   &:before{
-
+    content: " ";
+    position: absolute;
+    background-color: #2384c6;
+    background-image: url("/images/GameBG.png");
+    background-repeat: repeat-x;
+    background-size: auto auto;
+    animation: animatedBackground 750ms linear infinite;
+    width: 100%;
+    height: 100%;
   }
 }
 #game-score, #game-menu-button{
