--- a/views/home/index.ejs
+++ b/views/home/index.ejs
@@ -3,7 +3,7 @@
     <div class="jumbotron">
         <div class="container-fluid">
             <h1><%- title %></h1>
-            <p>Welcome to <%- title %></p>
+            <p>Welcome to the <%- title %></p>
             <p>Under Construction. Please come back later!</p>
             <a class="btn btn-primary btn-lg" href="game">Play Now <i class="fa fa-arrow-right fa-fw"></i></a>
         </div>
