--- a/public/stylesheets/game.scss
+++ b/public/stylesheets/game.scss
@@ -1,5 +1,17 @@
-nav {
+$game-panel-bg: #337ab7;
+$game-panel-border: solid 1px #2e6da4;
+
+nav{
   margin-bottom: 0 !important;
+}
+main{
+  img[src$=".gif"], img[src$=".png"] {
+    image-rendering: -moz-crisp-edges; /* Firefox */
+    image-rendering: -o-crisp-edges; /* Opera */
+    image-rendering: -webkit-optimize-contrast; /* Webkit (non-standard naming) */
+    image-rendering: pixelated;
+    -ms-interpolation-mode: nearest-neighbor; /* IE (non-standard property) */
+  }
 }
 @keyframes animatedBackground {
   from { background-position: 512px 0; }
@@ -19,30 +31,47 @@ nav {
     animation: animatedBackground 750ms linear infinite;
     width: 100%;
     height: 100%;
+    z-index: -1;
   }
 }
-#game-score, #game-menu-button{
-  font-family: monospace;
+#game-score-wrapper, #game-pause-menu-button{
+  top: -60px;
+  transition: 250ms;
+  font-family: 'Ubuntu Mono', monospace;
   display: flex;
-  border-bottom: solid 1px #777;
-  align-items: center;
+  flex-direction: column;
+  align-items: flex-start;
   vertical-align: middle;
   position: absolute;
   padding: 0.5em 1em;
-  background-color: #aaa;
   font-weight: bold;
-  height: 50px;
+  height: 55px;
   width: 100px;
+  border-radius: 0;
+  &:not(a){
+    color: #fff;
+    background-color: $game-panel-bg;
+  }
 }
-#game-score{
-  top: 0;
+#game-score-wrapper{
   left: 0;
   border-bottom-right-radius: 1em;
-  border-right: solid 1px #777;
+  border-bottom: $game-panel-border;
+  border-right: $game-panel-border;
 }
-#game-menu-button{
-  top: 0;
+#game-pause-menu-button{
   right: 0;
+  font-size: 1.25em;
+  align-items: center;
+  justify-content: center;
   border-bottom-left-radius: 1em;
-  border-left: solid 1px #777;
+  border-top: none;
+  border-right: none;
+}
+#game-player{
+  position: absolute;
+  top: 240px; //190 240 290
+  left: 32px;
+  width: 128px;
+  height: 128px;
 }
