--- a/views/home/index.ejs
+++ b/views/home/index.ejs
@@ -5,7 +5,10 @@
             <h1><%- title %></h1>
             <p>Welcome to the <%- title %></p>
             <p>Under Construction. Please come back later!</p>
-            <a class="btn btn-primary btn-lg" href="game">Play Now <i class="fa fa-arrow-right fa-fw"></i></a>
+            <a class="btn btn-primary btn-lg" href="game">
+                Play Now
+                <i class="fa fa-arrow-right fa-fw" aria-hidden="true"></i>
+            </a>
         </div>
     </div>
     <section class="panel panel-default">
