--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -3,7 +3,7 @@
         <div class="container-fluid">
             <!-- Brand and toggle get grouped for better mobile display -->
             <div class="navbar-header">
-                <span class="navbar-brand"><img alt="Brand" src="/images/LogoDark.png">LTT Game</span>
+                <span class="navbar-brand"><img alt="Site Creator's Logo" src="/images/LogoDark.png">LTT Game</span>
                 <button type="button" class="navbar-toggle collapsed" data-toggle="collapse"
                         data-target="#navbar-collapse-main" aria-expanded="false">
                     <span class="sr-only">Toggle navigation</span>
@@ -29,15 +29,14 @@
                 <ul class="nav navbar-nav navbar-right">
                     <li class="dropdown">
                         <a href="javascript:void(0);" class="dropdown-toggle" data-toggle="dropdown" role="button"
-                           aria-haspopup="true"
-                           aria-expanded="false">Links <span class="caret"></span></a>
+                           aria-haspopup="true" aria-expanded="false">Links <span class="caret"></span></a>
                         <ul class="dropdown-menu">
                             <li><a href="https://github.com/sonicer105/LMGGame">Github</a></li>
-                            <li><a href="javascript:void(0);">LTT Form Post (TODO)</a></li>
+                            <!--<li><a href="javascript:void(0);">LTT Form Post</a></li>-->
                             <!--TODO: ^ Make form post and include link here!-->
                             <li><a href="https://sailextech.me">Creator's Site</a></li>
                             <li role="separator" class="divider"></li>
-                            <li><p class="navbar-text">Last Updated 10/05/2017</p></li>
+                            <li><p class="navbar-text">Last Updated 14/05/2017</p></li>
                         </ul>
                     </li>
                 </ul>
