--- a/public/stylesheets/game.scss
+++ b/public/stylesheets/game.scss
@@ -1,11 +1,13 @@
 $game-panel-bg: #337ab7;
 $game-panel-border: solid 1px #2e6da4;
+$game-window-width: 100vw;
+$game-window-height: calc(100vh - 119px);
 
 nav{
   margin-bottom: 0 !important;
 }
 main{
-  img[src$=".gif"], img[src$=".png"] {
+  img[src$=".gif"], img[src$=".png"]{
     image-rendering: -moz-crisp-edges; /* Firefox */
     image-rendering: -o-crisp-edges; /* Opera */
     image-rendering: -webkit-optimize-contrast; /* Webkit (non-standard naming) */
@@ -20,7 +22,8 @@ main{
 #game-window{
   position: relative;
   width: 100%;
-  height: calc(100vh - 119px);
+  height: $game-window-height;
+  min-height: 512px;
   &:before{
     content: " ";
     position: absolute;
@@ -31,7 +34,9 @@ main{
     animation: animatedBackground 750ms linear infinite;
     width: 100%;
     height: 100%;
-    z-index: -1;
+    min-height: 512px;
+    min-width: 512px;
+    z-index: 1;
   }
 }
 #game-score-wrapper, #game-pause-menu-button{
@@ -48,6 +53,7 @@ main{
   height: 55px;
   width: 100px;
   border-radius: 0;
+  z-index: 50;
   &:not(a){
     color: #fff;
     background-color: $game-panel-bg;
@@ -74,4 +80,53 @@ main{
   left: 32px;
   width: 128px;
   height: 128px;
+  z-index: 25;
+}
+#game-main-menu, #game-pause-menu{
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  content: " ";
+  position: absolute;
+  height: $game-window-height;
+  width: $game-window-width;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  z-index: 500;
+  background-color: rgb(0,0,0);
+  background-color: rgba(0, 0, 0,0.5);
+  &>div{
+    display: flex;
+  }
+  &>a{
+    height: auto;
+  }
+  &>a, &>div, &>h1, &>h2{
+    text-align: center;
+    color: #fff;
+    width: 50%;
+    margin: 0.5em auto;
+    a{
+      transition: 250ms;
+      display: block;
+      width: 40%;
+      margin: 0 auto;
+      border: solid 5px transparent;
+      border-radius: 15px;
+      &.active{
+        border: solid 5px #00f;
+      }
+      img{
+        width: 100%;
+      }
+    }
+  }
+  &>h1, &>h2{
+    margin: 0.2em auto;
+  }
+  &>h2{
+    font-size: 1.5em;
+  }
 }
