Player movement is now a thing

--- a/views/home/game.ejs
+++ b/views/home/game.ejs
@@ -20,7 +20,8 @@
             </span>
         </a>
         <img id="game-player" src="/images/404.png">
-        <div id="game-main-menu">
+        <div id="game-movement-tap-region"></div>
+        <div id="game-main-menu" style="display: none">
             <h1>Main Menu</h1>
             <h2>Player Select</h2>
             <div>
@@ -31,7 +32,7 @@
                 Play
             </a>
         </div>
-        <div id="game-pause-menu">
+        <div id="game-pause-menu" style="display: none">
             <h1>Game Paused</h1>
             <a id="game-pause-menu-resume" class="btn btn-primary btn-lg" href="javascript:void(0);">
                 Resume
