--- a/public/stylesheets/game.scss
+++ b/public/stylesheets/game.scss
@@ -39,6 +39,14 @@ main{
     z-index: 1;
   }
 }
+#game-movement-tap-region{
+  position: absolute;
+  top: 195px;
+  left: 0;
+  width: 100%;
+  height: 300px;
+  z-index: 450;
+}
 #game-score-wrapper, #game-pause-menu-button{
   top: -60px;
   transition: 250ms;
@@ -75,6 +83,7 @@ main{
   border-right: none;
 }
 #game-player{
+  transition: 100ms;
   position: absolute;
   top: 240px; //190 240 290
   left: 32px;
@@ -109,7 +118,7 @@ main{
     width: 50%;
     margin: 0.5em auto;
     a{
-      transition: 250ms;
+      transition: 500ms;
       display: block;
       width: 40%;
       margin: 0 auto;
