Fixed Copy/Paste issue from README.md into index.ejs

--- a/views/home/index.ejs
+++ b/views/home/index.ejs
@@ -3,8 +3,8 @@
     <div class="alert alert-warning">
         <i class="fa fa-exclamation-triangle fa-fw" aria-hidden="true"></i>
         <strong>DISCLAIMER:</strong>
-        Though you can play this game on mobile phones, I do not recommended it. The game is best enjoyed on a desktop. Use a
-        tablet at the vary least.
+        Though you can play this game on mobile phones, I do not recommended it. The game is best enjoyed on a desktop.
+        Use a tablet at the vary least.
     </div>
     <div class="jumbotron">
         <div class="container-fluid">
@@ -24,10 +24,8 @@
                 A NodeJS game made as part of the Floatplane Media hiring process.
             </p>
             <p>
-            You can find the LTT post about it <span style="text-decoration: line-through">here</span> (Not making one until I hear back from Floatplane)
-            </p>
-            <p>
-            You can find a live version [here](https://infinite-brook-45557.herokuapp.com/)
+                You can find the LTT post about it <span style="text-decoration: line-through">here</span> (Not making
+                one until I hear back from Floatplane)
             </p>
         </div>
     </section>
