Added Google Analytics Tracking to every page

--- a/views/partials/head.ejs
+++ b/views/partials/head.ejs
@@ -55,3 +55,5 @@
 <meta name="msapplication-TileImage" content="/favicons/ms-icon-144x144.png">
 <meta name="theme-color" content="#0000ff">
 
+<!-- Google Analytics Tracking -->
+<script src="/scripts/tracking.js"></script>
