preperation for database access for score boards

--- a/views/home/index.ejs
+++ b/views/home/index.ejs
@@ -18,7 +18,7 @@
     </div>
     <section class="panel panel-default">
         <div class="panel-body">
-            <h1>About</h1><!--TODO: Fill in About Section-->
+            <h1>About</h1>
             <hr>
             <p>
                 A NodeJS game made as part of the Floatplane Media hiring process.
@@ -31,7 +31,7 @@
     </section>
     <section class="panel panel-default">
         <div class="panel-body">
-            <h1>How To Play</h1><!--TODO: Fill in How To Play Section-->
+            <h1>How To Play</h1>
             <hr>
             <ul>
                 <li>Use the <kbd>&uparrow;</kbd> or <kbd>W</kbd> key to go up a lane.</li>
@@ -46,14 +46,6 @@
                 </li>
                 <li>
                     Avoid flaming servers.
-                    <ul>
-                        <li>
-                            No, they are NOT the same ones as in Linus's server room.
-                            <ul>
-                                <li><small>(I'm trying not to incur the wrath of Linus)</small></li>
-                            </ul>
-                        </li>
-                    </ul>
                 </li>
             </ul>
         </div>
