More preperation for scorboard. Added in depth build instructions for setting up a fresh build of the project that includes database directions. Added audio files for eventual implementation in game. Othe small tweeks were made.

--- a/views/home/index.ejs
+++ b/views/home/index.ejs
@@ -50,4 +50,42 @@
             </ul>
         </div>
     </section>
+    <section class="panel panel-default">
+        <div class="panel-body">
+            <h1>Third Party Asset Licenses</h1>
+            <hr>
+            <ul>
+                <li>
+                    Game character Linus and Luke are property of their respective owner (unknown license)
+                </li>
+                <li>
+                    All other game graphics are home made and are released under the
+                    <a href="https://github.com/sonicer105/LMGGame/blob/master/LICENSE">MIT</a>
+                    License (excluding logo in upper left)
+                </li>
+                <li>
+                    Game sound effects
+                    <a href="https://www.freesound.org/people/LittleRobotSoundFactory/packs/16681/">
+                        "8-Bit Sound Effects Library" by LittleRobotSoundFactory
+                    </a>
+                    is licensed under the
+                    <a href="https://creativecommons.org/licenses/by-nc-sa/4.0/">
+                        Creative Commons Attribution 3.0 Unported
+                    </a>
+                    License
+                </li>
+                <li>
+                    Game background music
+                    <a href="http://freemusicarchive.org/music/sawsquarenoise/OverHeated_Alfa_02/Fire_Darer">
+                        "Fire Darer" by sawsquarenoise
+                    </a>
+                    is licensed under the
+                    <a href="https://creativecommons.org/licenses/by-nc-sa/4.0/">
+                        Creative Commons Attribution NonCommercial ShareAlike 4.0 International
+                    </a>
+                    License
+                </li>
+            </ul>
+        </div>
+    </section>
 </main>
