--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,6 +1,6 @@
 <footer>
     <div class="text-center">
         <p>Game released under the MIT License</p>
-        <p>Created by Sailex Tech - Powered by NodeJS Express</p>
+        <p>Created by Sailex Tech - Powered by Express and MongoDB</p>
     </div>
 </footer>
